update dorm pictures
